Bug 1997043 - Enable animating between 'auto' and explicit lengths for text-decoration-inset. r=firefox-style-system-reviewers,layout-reviewers,dshin

Differential Revision: https://phabricator.services.mozilla.com/D308250